crates/puffin-package/src/snapshots/puffin_package__requirements_txt__test__line-endings-empty.txt.snap
---
source: crates/puffin-package/src/requirements_txt.rs
expression: actual
---
RequirementsTxt {
    requirements: [],
    constraints: [],
}
