crates/puffin-package/src/snapshots/puffin_package__requirements_txt__test__line-endings-whitespace.txt.snap
---
source: crates/puffin-package/src/requirements_txt.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Requirement {
                name: PackageName(
                    "numpy",
                ),
                extras: None,
                version_or_url: None,
                marker: None,
            },
            hashes: [],
            editable: false,
        },
        RequirementEntry {
            requirement: Requirement {
                name: PackageName(
                    "pandas",
                ),
                extras: Some(
                    [
                        ExtraName(
                            "tabulate",
                        ),
                    ],
                ),
                version_or_url: Some(
                    Url(
                        Url {
                            scheme: "https",
                            cannot_be_a_base: false,
                            username: "",
                            password: None,
                            host: Some(
                                Domain(
                                    "github.com",
                                ),
                            ),
                            port: None,
                            path: "/pandas-dev/pandas",
                            query: None,
                            fragment: None,
                        },
                    ),
                ),
                marker: None,
            },
            hashes: [],
            editable: false,
        },
    ],
    constraints: [],
}
